--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port = 8090
 
 # INFORMAÇÕES PARA CONEXÃO COM O BANCO DE DADOS MYSQL
 spring.datasource.url=jdbc:mysql://localhost/generator_spring?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Sherlock221b@
+spring.datasource.username=YOUR DATABASE USERNAME HERE
+spring.datasource.password=YOUR DATABASE KEY HERE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MANIPULANDO ESTRUTURAS (TABELAS)
